--- a/index.html
+++ b/index.html
@@ -12,9 +12,178 @@
 </head>
 
 <body>
-    <header>
-
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Avatár</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a class="nav-item nav-link active" href="#"><span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link" href="#index.html">Főoldal</a>
+                <a class="nav-item nav-link" href="#pandora.html">Pandora</a>
+                <a class="nav-item nav-link" href="#szereplok.html">Szereplők</a>
+                <a class="nav-item nav-link" href="#cselekmeny">Cselekmény</a>
+                <a class="nav-item nav-link" href="#forras">Források</a>
+            </div>
+        </div>
+    </nav>
+    <header class="container">
+        <div class="row">
+            <div class="col">
+                <img id="logo" src="Avatar-Logo.jpg" alt="Avatar">
+            </div>
+        </div>
     </header>
+    <main class="container">
+        <div class="row">
+            <div class="col">
+                <p>Az Avatar című film <em>2009 decemberében jelent meg</em>, melynek történetét James Cameron 1995-ben
+                    kezdte el
+                    kitalálni.
+                    Ez
+                    a film a világon a <strong>legelső teljesen 3D-és élményt</strong> nyújtó film, több szempontból is
+                    újító. <em>40%
+                        élőszereplővel,
+                        60%
+                        számítógépes grafikával</em> készült. Olyan 3D-és élményt adott, amit azóta is kevés film
+                    nyújtott.
+                    A CGI
+                    használata
+                    mellett James Cameron a saját maga által kifejlesztett digitális 3D-s kamera technológiát is
+                    használta.
+                    Mindezek
+                    mellett egy <strong>„simulcam”</strong> technológiát is kifejlesztett. Ahol élőben láthatta a
+                    monitorokon, hogy hogyan fog
+                    kinézni a
+                    végén az adott jelenet. A megvalósítására hatalmas hardveres erőforrást, szoftvereket és a
+                    legfejlettebb
+                    technológiát alkalmazta. A gigantikus adatmennyiség feldolgozásához a Microsoft egy <strong>egyedi
+                        felhő
+                        alapú
+                        rendszert</strong>
+                    fejlesztett ki.</p>
+                <p>Az élőlényeknek külön meg kellett tervezni a mozgásukat. A szereplők komoly katonai kiképzésen vettek
+                    rész,
+                    íjász
+                    leckéket, lovaglást és mozgás kultúrát tanultak. Hawaii-ra is elvitték a színészeket, hogy
+                    megismerjék,
+                    milyen
+                    dzsungelben mozogni. Kína egyes vidékei ihlették <a id="pandora" href="pandora.html">Pandora</a>
+                    tájának
+                    a kinézetét. A
+                    földön található egzotikus
+                    virágokat
+                    20-50-szeres nagyításban tettek bele a filmbe. Az alkalmazott technológiáknak köszönhetően a test
+                    mozgását
+                    könnyen
+                    felvehették, de az arcmimika pontos felvétele volt a legnehezebb. Kamerával rögzítették a színész
+                    arcmozgását és
+                    a
+                    kiemelt pontok alapján készítették el az animációs lények arcának mozgását.</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <img id="face" src="face.jpg" alt="">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <h2 id="cselekmeny">Cselekmény:</h2>
+                <p>A 22. század közepén az emberiség már rendelkezik olyan technológiával, amivel <em>képes a
+                        csillagközi
+                        utazásra.</em>
+                    Mivel
+                    felélték a Föld készleteit, elmentek az <strong>Alfa Centauri csillagrendszerbe</strong> is. Ennek
+                    egyik
+                    holdja a Pandora,
+                    lakható. A
+                    különleges növényzet és állatok mellett <strong>humanoid faj</strong> is él a bolygón. A
+                    <em>na’vik</em>
+                    három méter magasak, hosszú
+                    farkuk
+                    van és kékek. Teljes harmóniában élnek a környezettel. Különleges nyelvük és kultúrájuk van. Egy
+                    értékes
+                    kristályt,
+                    az <strong>unobtaniumot</strong> is nagy mennyiségben kimutatta az odaérkező emberek műszerei. A
+                    filmben egy
+                    katonai csoport
+                    erővel
+                    akarja ezt megszerezni. A másik csoport kutatókból áll, akiknek fontosabb a na’vik kultúrájának
+                    megismerése.
+                    Ez
+                    okozza a fő konfliktust a történetben. Jake Sully deréktől lebénult katona átvette halott testvére
+                    helyét a
+                    tudományos kísérletben. <strong>„Avatárokat” </strong> hoznak létre az emberi <em>DNS
+                        felhasználásával</em>,
+                    ami keveredik az
+                    idegenekével.
+                    Ahhoz, hogy az emberek személyisége átmenjen az avatárba, be kell feküdnie egy gépbe. Jake avatár
+                    testben
+                    beépül
+                    a
+                    na’vik közé. Egy parancsok azonban titokban megbízza őt, hogy mérje fel a terepet egy katonai
+                    akcióhoz. Jake
+                    megismerkedik Neytirivel, aki az egyik törzs vezetőjének a lánya. Megbízzák őt, hogy tanítsa Jaket.
+                    Jake
+                    egyre
+                    inkább <strong>na’vi szemmel látja a világot</strong>, és nem ad át információt az ezredesnek.
+                    Amikor a
+                    sereg megtámadja a
+                    bennszülötteket, átáll az ő oldalukra.
+                </p>
+                <h2>Morális tanítás:</h2>
+                <p>Az élet erkölcsi érték, viselkedésünkkel <strong>összhangban</strong> kell lennünk a társainkkal és a
+                    természettel egyarányt.
+                    A
+                    történet az emberi történelemben ismétlődő történéssel szakít, hogy ne a katonai vagy technológiai
+                    fölényben
+                    lévő
+                    emberek semmisítsék meg a gyengébbeket. Olyan civilizáció működőképességét mutatja be, amiben
+                    <strong>mindenki
+                        képessége
+                        hasznos a társadalomban.</strong>
+                </p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <h4 id="forras">Források:</h4>
+                <div id="forrasok">
+                    <a href="https://hu.wikipedia.org/wiki/Avatar_(film)" target="_blank">Wikipedia</a> <br>
+                    <a href="https://www.avatar.com/" target="_blank">Avatar</a> <br>
+                    <a href="https://hu.ign.com/avatar/54624/feature/pandora-penzzel-teli-szelenceje-10-eves-az-avatar"
+                        target="_blank">IGN</a><br>
+                    <a href="https://videa.hu/videok/tudomany-technika/avatar-pandora-vilaganak-megteremtese-2010-3d-james-cameron-Q5jfy80zwalK508U"
+                        target="_blank">Pandora
+                        Világának megteremtése</a> <br>
+                    <a href="https://james-camerons-avatar.fandom.com/wiki/Na%27vi" target="_blank">Avatar
+                        fandom-Na'vi</a>
+                    <br>
+                    <a href="https://james-camerons-avatar.fandom.com/wiki/Grace_Augustine" target="_blank">Avatar
+                        fandom-Grace
+                        Augustine</a><br>
+                    <a href="https://james-camerons-avatar.fandom.com/wiki/Neytiri" target="_blank">Avatar
+                        fandom-Neytiri</a>
+                    <br>
+                    <a href="https://james-camerons-avatar.fandom.com/wiki/Miles_Quaritch" target="_blank">Avatar
+                        fandom-Miles
+                        Quaritch</a>
+                    <a href="https://collider.com/avatar-sequels-james-cameron-peter-jackson/">Collider</a>
+                </div>
+            </div>
+        </div>
+
+    </main>
+    <footer class="container-fluid">
+        <div class="row">
+            <div class="col">
+                <p>Készítette: Veszteg Bernadett</p>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
