--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Avatár</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -20,10 +20,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="#"><span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link" href="#index.html">Főoldal</a>
-                <a class="nav-item nav-link" href="#pandora.html">Pandora</a>
-                <a class="nav-item nav-link" href="#szereplok.html">Szereplők</a>
+                <a class="nav-item nav-link active" href="#index.html">Főoldal</a>
+                <a class="nav-item nav-link" href="pandora.html">Pandora</a>
+                <a class="nav-item nav-link" href="szereplok.html">Szereplők</a>
                 <a class="nav-item nav-link" href="#cselekmeny">Cselekmény</a>
                 <a class="nav-item nav-link" href="#forras">Források</a>
             </div>
@@ -31,14 +30,14 @@
     </nav>
     <header class="container">
         <div class="row">
-            <div class="col">
-                <img id="logo" src="Avatar-Logo.jpg" alt="Avatar">
+            <div class="col mt-2 mt-md-5 mb-3">
+                <img class="img-fluid img-thumbnail mx-auto d-block bg-info" src="Avatar-Logo.jpg" alt="Avatar">
             </div>
         </div>
     </header>
-    <main class="container">
+    <main class="container tartalom">
         <div class="row">
-            <div class="col">
+            <div class="col pt-3">
                 <p>Az Avatar című film <em>2009 decemberében jelent meg</em>, melynek történetét James Cameron 1995-ben
                     kezdte el
                     kitalálni.
@@ -70,7 +69,7 @@
                     leckéket, lovaglást és mozgás kultúrát tanultak. Hawaii-ra is elvitték a színészeket, hogy
                     megismerjék,
                     milyen
-                    dzsungelben mozogni. Kína egyes vidékei ihlették <a id="pandora" href="pandora.html">Pandora</a>
+                    dzsungelben mozogni. Kína egyes vidékei ihlették <a href="pandora.html">Pandora</a>
                     tájának
                     a kinézetét. A
                     földön található egzotikus
@@ -86,7 +85,7 @@
         </div>
         <div class="row">
             <div class="col">
-                <img id="face" src="face.jpg" alt="">
+                <img class="img-fluid img-thumbnail mx-auto d-block bg-info" src="face.jpg" alt="">
             </div>
         </div>
         <div class="row">
@@ -149,7 +148,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col">
+            <div class="col mb-3 pb-2">
                 <h4 id="forras">Források:</h4>
                 <div id="forrasok">
                     <a href="https://hu.wikipedia.org/wiki/Avatar_(film)" target="_blank">Wikipedia</a> <br>
@@ -171,16 +170,16 @@
                     <a href="https://james-camerons-avatar.fandom.com/wiki/Miles_Quaritch" target="_blank">Avatar
                         fandom-Miles
                         Quaritch</a>
+                    <br>
                     <a href="https://collider.com/avatar-sequels-james-cameron-peter-jackson/">Collider</a>
                 </div>
             </div>
         </div>
-
     </main>
-    <footer class="container-fluid">
+    <footer class="container">
         <div class="row">
             <div class="col">
-                <p>Készítette: Veszteg Bernadett</p>
+                <p class="text-center py-2 bg-light text-dark">Készítette: Veszteg Bernadett</p>
             </div>
         </div>
     </footer>
