--- a/pandora.html
+++ b/pandora.html
@@ -8,11 +8,26 @@
     <title>Pandora</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-        <link rel="stylesheet" href="pandora.css">
+        <link rel="stylesheet" href="css/pandora.css">
 </head>
 
 <body>
-
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Avatár</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a class="nav-item nav-link active" href="#index.html">Főoldal</a>
+                <a class="nav-item nav-link" href="pandora.html">Pandora</a>
+                <a class="nav-item nav-link" href="szereplok.html">Szereplők</a>
+                <a class="nav-item nav-link" href="#cselekmeny">Cselekmény</a>
+                <a class="nav-item nav-link" href="#forras">Források</a>
+            </div>
+        </div>
+    </nav>
 </body>
 
 </html>
