--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="#index.html">Főoldal</a>
+                <a class="nav-item nav-link active" href="index.html">Főoldal</a>
                 <a class="nav-item nav-link" href="pandora.html">Pandora</a>
                 <a class="nav-item nav-link" href="szereplok.html">Szereplők</a>
                 <a class="nav-item nav-link" href="#cselekmeny">Cselekmény</a>
@@ -148,7 +148,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col mb-3 pb-2">
+            <div class="col mb-3">
                 <h4 id="forras">Források:</h4>
                 <div id="forrasok">
                     <a href="https://hu.wikipedia.org/wiki/Avatar_(film)" target="_blank">Wikipedia</a> <br>
