--- a/pandora.html
+++ b/pandora.html
@@ -8,7 +8,7 @@
     <title>Pandora</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-        <link rel="stylesheet" href="css/pandora.css">
+    <link rel="stylesheet" href="css/pandora.css">
 </head>
 
 <body>
@@ -20,14 +20,111 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="#index.html">Főoldal</a>
+                <a class="nav-item nav-link active" href="index.html">Főoldal</a>
                 <a class="nav-item nav-link" href="pandora.html">Pandora</a>
                 <a class="nav-item nav-link" href="szereplok.html">Szereplők</a>
-                <a class="nav-item nav-link" href="#cselekmeny">Cselekmény</a>
-                <a class="nav-item nav-link" href="#forras">Források</a>
             </div>
         </div>
     </nav>
+    <header class="container">
+        <div class="row">
+            <div class="col">
+                <h1 class="text-center">Pandora</h1>
+            </div>
+        </div>
+    </header>
+    <main class="container tartalom p-3">
+        <div class="row">
+            <div class="col my-3">
+                <img class="img-fluid img-thumbnail mx-auto d-none d-md-block bg-info kep" src="Ikran.jpg" alt="Ikran">
+                Pandora az Alfa Centauri naprendszerben a <em>Polyphemos gázóriás körül kering három másik holddal
+                    együtt</em>.
+                A Földtől
+                <strong>4,37 fényévnyire található</strong>. Egy hatalmas őserdő, tele gyönyörű vízesésekkel, óriási
+                hegyekkel,
+                ahol a dzsungel
+                fluoreszkál. Tele van az emberekre veszélyes repülő lényekkel, szörnyekkel. Érdekessége, hogy <em>minden
+                    szárazföldi
+                    pandorai állatnak hat lába van</em>.
+                Az unobtanium nevű szupravezető is megtalálható a holdon, mivel ez az érc képes lebegni, így bizonyos
+                lelőhelyek
+                is
+                lebegnek. Pandorán így hatalmas lebegő sziklák is találhatók. A növényeknek nincs szükségük
+                fotoszintézisre,
+                mert a
+                naprendszer napja is más szerkezetű, ezért lehetnek pirosak, barnák, még lilák is. A növények színüknek
+                megfelelően
+                képesek világítani.
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 d-md-none">
+                <img class="img-fluid img-thumbnail mx-auto d-block bg-info" src="kalapfeju.jpg"
+                    alt="Hammerhead titanothere">
+            </div>
+            <div class="col-md-5">
+                <h2>Állat világa:</h2>
+                <dl>
+                    <dt>Thanator:</dt>
+                    <dd>Pandorán ők a csúcsragadozók. Körülbelül 4 méter magasak. Az állat hangulatát a tarkóján lévő
+                        szaruképződmények mutatják meg.</dd>
+                    <dt>Banshee/ikran:</dt>
+                    <dd>A na’vik ezeken repülnek. Szárnyas, tarajos hüllők, melyek nagyon színesek.</dd>
+                    <dt>Leonopteryx/toruk:</dt>
+                    <dd>Az ikránok rokona, de nagyobbal és vadabbak. Megszelídítésükkel nagyon kevesen próbálkoznak.
+                    </dd>
+                    <dt>Tapirus:</dt>
+                    <dd>Malacokra hasonló állatok, amelyekre a ragadozók szívesen vadásznak.</dd>
+                    <dt>Direhorse:</dt>
+                    <dd>Földi lóra hasonlító állatok. A na’vik a szárazföldön ezeken utaznak.</dd>
+                    <dt>Viperwolf:</dt>
+                    <dd>Földi hiénaszerű ragadozók.</dd>
+                    <dt>Prolemuris:</dt>
+                    <dd>Nem agresszív fáramászó majomszerű lények.</dd>
+                    <dt>Hammerhead titanothere:</dt>
+                    <dd>Kalapácsfejű, agresszív növényevő.</dd>
+                    <dt>Medusa:</dt>
+                    <dd>Levegőben élnek, a medúzákhoz hasonlítanak.</dd>
+                    <dt>Tetrapteron:</dt>
+                    <dd>Az ikranokhoz hasonlítanak.</dd>
+                </dl>
+            </div>
+            <div class="col-md-5">
+                <img class="img-fluid img-thumbnail d-none d-md-block bg-info" src="kalapfeju.jpg"
+                    alt="Hammerhead titanothere">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 d-md-none">
+                <img class="img-fluid img-thumbnail mx-auto d-block bg-info" src="szentfa.jpg" alt="Lelkek fája">
+            </div>
+            <div class="col-md-5">
+                <h2>Növény világa:</h2>
+                <dl>
+                    <dt>Helicoradian:</dt>
+                    <dd>Csoportokban élő tölcséres növény, ami érintésre összehúzódik. A karácsonyfaféreg nevű tengeri
+                        élőlényre hasonlít.</dd>
+                    <dt>Octoshroom:</dt>
+                    <dd>Egy óriás gombafaj.</dd>
+                    <dt>Lelkek fája:</dt>
+                    <dd>Fontos szimbólum a na’vik számára. Fehér színű fűzfára hasonlító fa. Az élő és az elhunyt na'vik
+                        kollektív emlékeit tárolja.</dd>
+                    <dt>Otthonfa:</dt>
+                    <dd>A klánok ilyen fák alatt laknak.</dd>
+                </dl>
+            </div>
+            <div class="col-md-5">
+                <img class="img-fluid img-thumbnail mx-auto d-block bg-info" src="szentfa.jpg" alt="Lelkek fája">
+            </div>
+        </div>
+    </main>
+    <footer class="container">
+        <div class="row">
+            <div class="col">
+                <p class="text-center py-2 bg-light text-dark">Készítette: Veszteg Bernadett</p>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
