--- a/szereplok.html
+++ b/szereplok.html
@@ -20,11 +20,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="#index.html">Főoldal</a>
+                <a class="nav-item nav-link active" href="index.html">Főoldal</a>
                 <a class="nav-item nav-link" href="pandora.html">Pandora</a>
                 <a class="nav-item nav-link" href="szereplok.html">Szereplők</a>
-                <a class="nav-item nav-link" href="#cselekmeny">Cselekmény</a>
-                <a class="nav-item nav-link" href="#forras">Források</a>
             </div>
         </div>
     </nav>
