--- a/szereplok.html
+++ b/szereplok.html
@@ -26,6 +26,140 @@
             </div>
         </div>
     </nav>
+    <main class="container tartalom">
+        <div class="row mt-3 p-3">
+            <div class="col-md-6">
+                <h2>Főbb karakterek:</h2>
+            </div>
+            <div class="col-md-6">
+                <img class="img-fluid img-thumbnail mx-auto d-block bg-info" src="navik.png" alt="Na'vik">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <table>
+                    <tr>
+                        <td class="elso">Na’vik:</td>
+                        <td>Érző földönkívüli humanoidok faj, akik a Pandora dzsungelében laknak. Átlagosan körülbelül 3
+                            méter
+                            magasak,
+                            sima, csíkos ciánszínű bőrük van, nagy sárga szemekkel és hosszú farokkal. Testük karcsúbb,
+                            mint
+                            az
+                            emberé.
+                            Mély
+                            lelki kapcsolatban állnak a holdjuk más élőlényével és egymással. Nyelvük 400-500 szavas.
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="elso">Jake Sully<br>(Sam Worthington):</td>
+
+                        <td>Jake tengerészgyalogos volt, de megrokkant. Eredetileg a testvére vett részt a kísérletben,
+                            de ő
+                            elhunyt. Mivel azonos volt a génállományuk, ezért Jake lehetőséget kapott, hogy Pandorára
+                            menjen. Az
+                            ezredes
+                            megpróbál hatni katonai múltjára és próbálja rávenni, hogy férkőzzön a na’vik közelébe és
+                            adja
+                            át a
+                            tapasztalatait
+                            neki. Miután sok időt töltött a na’vik között, valami megváltozik benne, nem jelent többet
+                            az
+                            ezredesnek
+                            és
+                            átáll a
+                            na’vik oldalára. Amikor megtudja, hogy az emberek meg akarják támadni Pandorát, saját maga
+                            toboroz
+                            sereget
+                            és
+                            segédkezik az emberek elűzésében Pandoráról.</td>
+                    </tr>
+
+                    <tr>
+                        <td class="elso">Neytiri<br>(Zoë Saldana):</td>
+                        <td>Az Omaticaya klán Na'vi hercegnője. Találkozik Jake Sullyval az egyik pandorai erdőben, és
+                            segít
+                            neki,
+                            amikor megtámadja egy falka viperfarkas. Neytiri hamarosan Jake tanára lesz, és segít neki
+                            több
+                            feladatban.
+                            Végül
+                            egymásba szeretnek. Neytiri Jake mellett harcol a Lélekfa elleni támadásban, és megmenti őt
+                            attól,
+                            hogy
+                            Quaritch
+                            ezredes megölje.</td>
+                    </tr>
+                    <tr>
+                        <td class="elso">Dr. Grace Augustine<br>(Sigourney Weaver):</td>
+                        <td>A tudományos személyzet tagja az Avatar programban. Segített Jake Sully-nak a
+                            beilleszkedésben.
+                            Ő is jó kapcsolatban volt a na’vik-kal, amíg meg nem halt a támadásban.</td>
+                    </tr>
+                    <tr>
+                        <td class="elso">Quaritch ezredes<br>(Stephen Lang):</td>
+                        <td>Miles Quaritch ezredes a 2150-es évek elején a Pandora biztonsági
+                            főnökeként
+                            szolgált. A pandorai háború idején a csapat rangidős parancsnokaként szolgált. A kimutatott
+                            érc
+                            megszerzéséért
+                            az
+                            Omaticaya klán szülőházának megsemmisítését irányította, a Lelkek Fája elleni támadást
+                            vezette,
+                            ahol
+                            akció
+                            közben
+                            megölték.</td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+        <div class="row mt-4">
+            <div class="col">
+                <h2>Stáblista:</h2>
+            </div>
+        </div>
+        <div class="row pb-3">
+            <div class="col-9">
+                <table id="masodik">
+                    <tr>
+                        <td class="elso">Rendezte:</td>
+                        <td>James Cameron</td>
+                    </tr>
+                    <tr>
+                        <td class="elso">Forgatókönyv:</td>
+                        <td>James Cameron</td>
+                    </tr>
+                    <tr>
+                        <td class="elso">Producer</td>
+                        <td>James Cameron, <br>
+                            Jon Landau, <br>
+                            Colin Wilson, <br>
+                            Brooke Breton, <br>
+                            Josh McLaglen (társ)</td>
+                    </tr>
+                    <tr>
+                        <td class="elso">Vágó:</td>
+                        <td>John Refoua, <br>
+                            Stephen E. Rivkin, <br>
+                            James Cameron</td>
+                    </tr>
+                    <tr>
+                        <td class="elso">Zene:</td>
+                        <td>James Horner, <br>
+                            Simon Franglen</td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+    </main>
+    <footer class="container">
+        <div class="row">
+            <div class="col">
+                <p class="text-center py-2 bg-light text-dark">Készítette: Veszteg Bernadett</p>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
