--- a/pandora.html
+++ b/pandora.html
@@ -42,7 +42,7 @@
             <div class="col my-3">
                 <img class="img-fluid img-thumbnail mx-auto d-none d-md-block bg-info" id="kep" src="Ikran.jpg"
                     alt="Ikran" title="Ikran">
-                Pandora az Alfa Centauri naprendszerben a <em>Polyphemos gázóriás körül kering három másik holddal
+               <p> Pandora az Alfa Centauri naprendszerben a <em>Polyphemos gázóriás körül kering három másik holddal
                     együtt</em>.
                 A Földtől
                 <strong>4,37 fényévnyire található</strong>. Egy hatalmas őserdő, tele gyönyörű vízesésekkel, óriási
@@ -59,7 +59,7 @@
                 mert a
                 naprendszer napja is más szerkezetű, ezért lehetnek pirosak, barnák, még lilák is. A növények színüknek
                 megfelelően
-                képesek világítani.
+                képesek világítani.</p>
             </div>
         </div>
         <div class="row">
