--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <a class="nav-item nav-link" href="szereplok.html">Szereplők</a>
                 <a class="nav-item nav-link" href="#cselekmeny">Cselekmény</a>
                 <a class="nav-item nav-link" href="#forras">Források</a>
-                <a class="nav-item nav-link" href="https://forms.gle/s9z4XjCCcaRVFCKVA" target="_blank">Kérdőív</a>
+                <a class="nav-item nav-link" href="https://forms.gle/vSq2aA9jDRyvEHu59" target="_blank">Kérdőív</a>
             </div>
         </div>
     </nav>
