--- a/pandora.html
+++ b/pandora.html
@@ -26,7 +26,7 @@
                 <a class="nav-item nav-link active" href="index.html">Főoldal</a>
                 <a class="nav-item nav-link" href="pandora.html">Pandora</a>
                 <a class="nav-item nav-link" href="szereplok.html">Szereplők</a>
-                <a class="nav-item nav-link" href="https://forms.gle/s9z4XjCCcaRVFCKVA" target="_blank">Kérdőív</a>
+                <a class="nav-item nav-link" href="https://forms.gle/vSq2aA9jDRyvEHu59" target="_blank">Kérdőív</a>
             </div>
         </div>
     </nav>
